<resources>
    <string name="app_name">PrimeDB</string>
    <string name="txt_title">Discover</string>
    <string name="txt_subtitle">Explore the movie information</string>
    <string name="txt_countMonthly">123</string>
    <string name="txt_lbMonthly">This month</string>
    <string name="lb_Dashboard">DASHBOARD</string>
    <string name="lb_BrowsMovie">BROWS LATEST MOVIE</string>
    <string name="lb_Coming_Up">Avenger : End Game (2019)</string>
    <string name="lb_Coming_Up_title">Coming Up</string>
    <string name="lb_Movie_One">Avengers: End Game (2019)</string>
    <string name="lb_Movie_two">John Wick III (2019)</string>
    <string name="lb_Movie_Three">X-Men: Dark Phoenix (2019)</string>
    <string name="lb_Movie_Four">Pokemon: Detective Pikachu (2019)</string>
    <string name="lb_movieDetail_title">Movie Detail</string>
    <string name="txt_movie_title">Avengers: End Game (2019)</string>
    <string name="txt_year">2019</string>
    <string name="txt_rating">8.1</string>
    <string name="txt_runtime">120 Minute</string>
    <string name="txt_genre">Action, Sci-Fi, Adventure</string>
    <string name="lb_director">Director</string>
    <string name="lb_cast">Cast:</string>
    <string name="lb_synopsis">Synopsis:</string>
    <string name="txt_synopsis">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</string>
    <string name="lb_movieDashboard_title">Dashboard</string>
    <string name="lbInCinema">IN THEATER </string>
    <string name="lbSinceDate">Since April 21, 2019</string>
    <string name="lbCountDown">COUNTDOWN</string>
    <string name="lbMostPopular">MOST POPULAR</string>
    <string name="lb_Search">SEARCH</string>
    <string name="lbMovieTitle">POCKEMON: DETECTIVE PIKACHU</string>
    <string name="lbGenre">Action/ Adventure/ Drama/ Horror</string>
    <string name="lbYear">2019</string>
    <string name="lbReleaseDate">28 JAN</string>
    <string name="lbLike">70%</string>
    <string name="lbTomato">10%</string>
    <string name="lb_synopsisDetail">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard ummy text ever since the 1500s,  when an unknown printer took a galley of type and  scrambled it to make a type specimen book.</string>
    <string name="lb_Director">Director:</string>
    <string name="lb_DirectorName"><![CDATA[Joe Rosso & Anthony Rosso]]></string>
    <string name="lb_CastOneName">AS SPIDERMAN</string>
    <string name="lb_SubRate">8.0</string>
    <string name="lb_SubBudget">250M</string>
    <string name="lbPopularLastYear">Most Popular Last Year</string>
    <string name="lbTagLine">TagLine</string>
    <string name="n_a">N/A</string>
    <string name="lb_MovieTitle">Movie Title</string>
    <string name="Distribute_Company">Distributed Company:</string>
    <string name="Wishlist">Wishlist</string>
    <string name="Calendar">Calendar</string>
    <string name="Rank">Rank</string>
    <string name="favorite">Favorite</string>
    <string name="Browse">Browse</string>
    <string name="Next_release">Next Release</string>
    <string name="search_movie">Search Movie</string>
    <string name="search">Search</string>
    <string name="search_hint">  Search </string>
    <string name="explore_now">Explore now</string>
    <string name="dot">...</string>
    <string name="Discover">Discover</string>
    <string name="explore">Explore</string>
    <string name="ViewMore">View More</string>
    <string name="Popular">Popular</string>
    <string name="view_more">View More</string>
    <string name="lbPopularOne">Movie Title</string>
    <string name="Topmoviethisyear">Top Movie This Year</string>
    <string name="explorebygenre">Explore by genre</string>
    <string name="Action">Action</string>
    <string name="Horror">Horror</string>
    <string name="Thrill">Thrill</string>
    <string name="upcoming">Upcoming</string>
    <string name="Booking_Ticket">Book Ticket</string>
    <string name="What_are_you_looking_for">What are you  looking for?</string>
    <string name="Password">Password</string>
    <string name="News_Feed">News Feed</string>
    <string name="Recap">Recap</string>
    <string name="Your_watchlist">Your watchlist</string>
    <string name="Profile">Profile</string>
    <string name="Nyka">Nyka</string>
    <string name="Movie">Movie</string>
    <string name="Part_of_your_favorite">Part of your favorite</string>
    <string name="Part_of_your_watchlist">Part of your watchlist</string>
    <string name="User_List">User List</string>
    <string name="Log_Out">Log Out</string>
    <string name="Create_List">Create List</string>
    <string name="List_name">List name</string>
    <string name="Description">Description</string>
    <string name="Create">Create</string>
    <string name="USER_LIST">USER LIST</string>
    <string name="PRIMEDB">PRIMEDB</string>
    <string name="OKAY">OKAY</string>
    <string name="CANCEL">CANCEL</string>
    <string name="Add_to_list">Add to list</string>
    <string name="Select_list">Select list</string>
    <string name="Overal_Rating">Overal Rating</string>
    <string name="Overall_Rating">Overall Rating</string>
    <string name="Personal_Rating">Personal Rating</string>
    <string name="Popularity">Popularity</string>
    <string name="RATING">RATING</string>
    <string name="Submit">Submit</string>
    <string name="Rate_Now">Rate Now</string>
    <string name="Give_your_list_a_name">Give your list a name</string>
    <string name="ADD_MOVIE">ADD MOVIE</string>
    <string name="Upcoming_Movie">Upcoming Movie</string>
    <string name="Trending_Movie">Trending Movie</string>
    <string name="On_Air_TV_Series">On-Air TV Series</string>
    <string name="Next_Release_TV_Series">Next Release TV Series</string>
    <string name="Season_Premier">Season Premier</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="Select_movie_list">Select Movie List</string>
    <string name="TV_Series">TV Series</string>
    <string name="You">You</string>
    <string name="New_Release_and_hot_flick_movie"><![CDATA[New Release & Hot Flick Movie]]></string>
    <string name="New_Episode_and_Season_Premier">New Episode and Season Premier</string>
    <string name="WatchList">Watchlist</string>
</resources>
