<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_moviedetail"
    android:background="@color/colorMainBackground">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <VideoView
        android:id="@+id/VvTrailer"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbMovieTitle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/VvTrailer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/avenir_lst_td_heavy"
            android:gravity="center"
            android:text="@string/lbMovieTitle"
            android:textColor="#ffffff"
            android:textSize="24sp"
            />
    <TextView
        android:layout_centerHorizontal="true"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:id="@+id/lbGenre"
        android:text="@string/lbGenre"
        android:textColor="#ffffff"
        android:fontFamily="@font/avenir_lst_td_heavy"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@id/lbMovieTitle"
        />


        <RelativeLayout
            android:id="@+id/RlSubDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/lbGenre">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="110dp"
                android:layout_height="170dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="90dp"
                android:background="@drawable/bg_imageview_main"
                android:padding="2.65dp"
                android:scaleType="fitXY"
                android:src="@drawable/image_one"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbYear"
                android:text="@string/lbYear"
                android:textColor="#ffffff"
                android:fontFamily="@font/avenir_lst_td_heavy"
                android:textSize="18sp"
                android:paddingStart="260dp"
                android:layout_marginTop="45dp"/>
            <TextView
                android:id="@+id/lbReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="85dp"
                android:fontFamily="@font/avenir_lst_td_heavy"
                android:paddingStart="260dp"
                android:text="@string/lbReleaseDate"
                android:textColor="#ffffff"
                android:textSize="18sp" />
            <TextView
            android:id="@+id/lbLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:fontFamily="@font/avenir_lst_td_heavy"
            android:paddingStart="260dp"
            android:text="@string/lbLike"
            android:textColor="#ffffff"
            android:textSize="18sp" />
            <TextView
                android:id="@+id/lbTomato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="165dp"
                android:fontFamily="@font/avenir_lst_td_heavy"
                android:paddingStart="260dp"
                android:text="@string/lbTomato"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/separateLine1"
            android:layout_width="1dp"
            android:layout_marginTop="25dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorSubtext"
            android:layout_below="@+id/RlSubDetail"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_below="@id/RlSubDetail"
            android:layout_marginStart="90dp"
            android:layout_marginTop="30dp"
            android:layout_alignStart="@id/separateLine1"

            android:src="@drawable/ic_thumbs_up"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_below="@id/RlSubDetail"
            android:layout_marginStart="290dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_dollar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_SubRate"
            android:fontFamily="@font/avenir_lst_td_heavy"
            android:textSize="20sp"
            android:textColor="@color/colorSubtext"
            android:layout_below="@id/RlSubDetail"
            android:layout_marginStart="90dp"
            android:layout_marginTop="60dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_SubBudget"
            android:fontFamily="@font/avenir_lst_td_heavy"
            android:textSize="20sp"
            android:textColor="@color/colorSubtext"
            android:layout_below="@id/RlSubDetail"
            android:layout_marginStart="275dp"
            android:layout_marginTop="60dp"
            />

        <TextView
            android:id="@+id/lbSynopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/separateLine1"
            android:text="@string/lb_synopsis"
            android:textSize="18sp"
            android:textColor="@color/colorSubtext"
            android:fontFamily="@font/avenir_lst_td_heavy"
            android:layout_marginStart="30dp"
            />
        <TextView
            android:id="@+id/lbSynopsisDetail"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbSynopsis"
            android:text="@string/lb_synopsisDetail"
            android:textSize="14sp"
            android:textColor="@color/colorSubtext"
            android:fontFamily="@font/avenir_lst_td_heavy"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            />
        <TextView
            android:id="@+id/lbDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/lbSynopsisDetail"
            android:text="@string/lb_Director"
            android:textSize="18sp"
            android:textColor="@color/colorSubtext"
            android:fontFamily="@font/avenir_lst_td_heavy"
            android:layout_marginStart="30dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_below="@id/lbDirector"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:id="@+id/ivDirector"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/director"
            />
        <TextView
            android:id="@+id/lbDirectorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/avenir_lst_td_heavy"
            android:textSize="14sp"
            android:textColor="@color/colorSubtext"
            android:text="@string/lb_DirectorName"
            android:layout_below="@id/lbDirector"
            />

        <TextView
            android:id="@+id/lbCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivDirector"
            android:layout_marginTop="25dp"
            android:text="@string/lb_cast"
            android:textSize="18sp"
            android:textColor="@color/colorSubtext"
            android:fontFamily="@font/avenir_lst_td_heavy"
            android:layout_marginStart="30dp"
            />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivCast"
            android:layout_marginBottom="40dp"
            android:layout_below="@id/lbCast"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/profile"
            />
        <TextView
            android:id="@+id/lbCastOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/avenir_lst_td_heavy"
            android:textSize="14sp"
            android:textColor="@color/colorSubtext"
            android:text="@string/lb_DirectorName"
            android:layout_below="@id/lbCast"
            />
        <TextView
            android:id="@+id/lbCastOneRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/avenir_lst_td_heavy"
            android:textSize="12sp"
            android:textColor="#8E8E8E"
            android:text="@string/lb_CastOneName"
            android:layout_below="@+id/lbCastOne"
            />
        </RelativeLayout>
    </ScrollView>
    <ImageView
        android:id="@+id/btnBackDetail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back"
        android:background="bg_"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</android.support.constraint.ConstraintLayout>