<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="380dp"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/circularstd_bold"
                android:text="@string/RATING"
                android:textColor="@color/colorMainBackground"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/lbMovieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/circularstd_bold"
                android:text="@string/lb_MovieTitle"
                android:textColor="@color/colorMainBackground"
                android:textSize="14sp"
                android:layout_below="@id/lbTitle"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/lbRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/circularstd_bold"
                android:text="@string/Rate_Now"
                android:textColor="@color/colorMainBackground"
                android:textSize="18sp"
                android:layout_below="@id/lbMovieTitle"
                />

            <RatingBar
                android:id="@+id/ratingMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbRating"
                android:numStars="10"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:stepSize="0.5"
                />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/Submit"
                android:background="#2ecc71"
                android:textColor="@color/colorMainBackground"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>