<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:id="@+id/ll_cast"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/lbDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/lb_Director"
        android:textSize="14sp"
        android:textColor="@color/colorSubtext"
        android:fontFamily="@font/circularstd_bold"
        android:layout_marginStart="30dp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_below="@id/lbDirector"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:id="@+id/ivDirector"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:civ_border_color="@color/colorSubtext"
        app:civ_border_width="1dp"
        android:src="@drawable/director"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbDirector"
        />
    <TextView
        android:id="@+id/lbDirectorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/avenir_lst_td_heavy"
        android:textSize="14sp"
        android:textColor="@color/colorSubtext"
        android:text="@string/Log_Out"
        android:layout_alignTop="@id/ivDirector"
        android:layout_alignBottom="@id/ivDirector"
        />

    <TextView
        android:id="@+id/lbCast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivDirector"
        android:layout_marginTop="25dp"
        android:text="@string/lb_cast"
        android:textSize="14sp"
        android:textColor="@color/colorSubtext"
        android:fontFamily="@font/avenir_lst_td_heavy"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/lbDirectorName"
        app:layout_constraintStart_toStartOf="parent"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="10dp"
        android:nestedScrollingEnabled="false"
        android:id="@+id/rc_cast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbCast"
        android:background="@color/colorBackgroundSecond"
        app:layout_constraintTop_toBottomOf="@id/lbCast"
        app:layout_constraintStart_toStartOf="parent"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/rc_cast">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_more"
            android:fontFamily="@font/proxima_nova_bold"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="13dp"
            android:layout_marginStart="35dp"
            />

    </FrameLayout>
</RelativeLayout>

<!--<android.support.v7.widget.RecyclerView-->
    <!--android:id="@+id/rc_cast"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:layout_constraintTop_toBottomOf="@id/ll_cast"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--&gt;-->

<!--</android.support.v7.widget.RecyclerView>-->


</android.support.constraint.ConstraintLayout>